--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
   <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-144x144-precomposed.png">
   <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
   <link href='https://fonts.googleapis.com/css?family=Amaranth' rel='stylesheet'>
-  <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="normalize.min.css">
+  <link rel="stylesheet" href="main.css">
 
 <!-- All script tags -->
-  <script>document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-  <script src="js/vendor/jquery.hashchange.min.js"></script>
-  <script src="js/vendor/jquery.easytabs.min.js"></script>
-  <script src="js/main.js"></script>
+  <script>document.write('<script src="jquery-1.10.1.min.js"><\/script>')</script>
+  <script src="jquery.hashchange.min.js"></script>
+  <script src="jquery.easytabs.min.js"></script>
+  <script src="main.js"></script>
 
 </head>
 
@@ -109,7 +109,7 @@
         <section class="clearfix">
           <div class="g2">
             <div class="photo">
-              <img src="/images/Aasik.jpg" alt="Your alt text">
+              <img src="Aasik.jpg" alt="Mohamed Aasik">
             </div>
             <div class="info">
               <h2>
@@ -157,7 +157,7 @@
                 <i class="icon-envelope"></i>
                   <div class="item-data">
                     <h3>
-                      <a href="mailto:write@your_mail.here">
+                      <a href="mailto:aasikcs@gmail.com">
                                 aasikcs@gmail.com
                       </a>
                     </h3>
@@ -309,19 +309,19 @@
                     <tr>
                       <td>
                         <div class="project-div">
-                          <div class="image"><img src="images/Project01.JPG" alt="Nature Club Website" ></div>
+                          <div class="image"><img src="Project01.JPG" alt="Nature Club Website" ></div>
                           <div class="data">Nature Club of UWU University</div>
                         </div>
                       </td>
                       <td>
                         <div class="project-div">
-                          <div class="image"><img src="images/Project02-04.JPG" alt="E-Library" ></div>
+                          <div class="image"><img src="Project02-04.JPG" alt="E-Library" ></div>
                           <div class="data">E-Library UWU University</div>
                         </div>
                       </td>
                       <td>
                         <div class="project-div">
-                          <div class="image"><img src="images/BSMWebsite.JPG" alt="Blosoom Websites"></div>
+                          <div class="image"><img src="BSMWebsite.JPG" alt="Blosoom Websites"></div>
                           <div class="data">Bloosoms Websites</div>
                         </div>
                       </td>
