--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                     <tr>
                       <td>
                         <div class="project-div">
-                          <div class="image"><img src="Project01.JPG" alt="Nature Club Website" ></div>
+                          <div class="image"><img src="Project01-01.JPG" alt="Nature Club Website" ></div>
                           <div class="data">Nature Club of UWU University</div>
                         </div>
                       </td>
