--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <html class="no-js">
 <head>
 <!-- Add Your Title -->
-  <title> Your Title Here </title>
+  <title> Mohamed Aasik| Software QualitY Engineering </title>
 
 <!-- All Meta Tags -->
   <meta charset="utf-8">
