--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
               </h4>
               <p>
                         Passionate Software Engineering profession interested in 
-                        Front-End,Back-End Development, Test Automation and Data Science. 
+                        Quality Engineering, Test Automation and Data Science. 
                         Always willing learn with lots of efforts to deliver the outcome.
               </p>
               </p>
