--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
                 <div class="item-data">
                   <h3>
                     <a href="http://twitter.com/Aasikcs">
-                         Aasikcs
+                         Aasik
                     </a>
                   </h3>
                   <p>
-                         Twitter Handle
+                         Github Handle
                   </p>
                 </div>
             </div>
