--- a/index.html
+++ b/index.html
@@ -326,24 +326,6 @@
                         </div>
                       </td>
                     </tr>
-                    <tr>
-                      <td>
-                        <div class="project-div">
-                          <div class="image">Project image</div>
-                          <div class="data">Project</div>
-                        </div>
-                      </td>
-                      <td>
-                        <div class="project-div">
-                          <div class="image">Project image</div>
-                          <div class="data">Project</div>
-                        </div>
-                      </td>
-                      <td>
-                        <div class="project-div">
-                          <div class="image">Project image</div>
-                          <div class="data">Project</div>
-                        </div>
                       </td>
                     </tr>
                   </tbody>
@@ -396,7 +378,7 @@
                     About Me
                 </h4>
                 <p>
-                   Passionate Software Engineer focused on Full Stack Development, Test Automation and Data Science.
+                   Passionate Software Engineer focused on Quality Engineering,Test Automation and Data Science.
                 </p>
               </div>
             </div>
